Fixed some styling on the tables for vertical alignment. Switch rows between paper subject count and paper variant count. Different icon for ambiguous subject warning (from question circle to exclamation triangle). Used proper primefaces tooltip and changed text.

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -185,3 +185,7 @@ table.file-no-border, table.file-no-border tr, table.file-no-border td {
 }
 
 .text-center {text-align:center}
+
+.label-value-panel, .ui-panelgrid-cell {
+	vertical-align: middle !important;
+}
